<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editquiz">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="378dp"
        android:layout_height="61dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/NextforQuize"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoOfQuestion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="334dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ExamID"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextExamID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/SubjectName"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextSubjectName"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextExamName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Grade"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextGrade"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubjectName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ExamType"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextExamType"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextGrade" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ExamDate"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextExamType" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/NoofQuestions"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextNoOfQuestion"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ExamName"
        android:textAlignment="viewStart"
        android:textColor="#24201F"
        app:layout_constraintBottom_toTopOf="@+id/editTextExamName"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextExamID" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="199dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/AddQuiz"
        android:textColor="#24201F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextExamName"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/ExamNametext"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/editTextSubjectName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextSubjectName"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextExamID"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/ExamIDtext"
        android:textAlignment="viewStart"
        android:textColor="#C2C2C2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/editTextExamName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextExamName"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextSubjectName"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/SubjectNametext"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/editTextGrade"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextGrade"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextGrade"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/Gradetext"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/editTextExamType"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextExamType"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextExamType"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/ExamTypetext"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="date"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="2023/10/04"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/editTextNoOfQuestion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextNoOfQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextNoOfQuestion"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="number"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="10"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>