<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#3B4E5BE6"
        app:cardCornerRadius="5dp"
        app:contentPaddingBottom="5dp"
        app:contentPaddingLeft="5dp"
        app:contentPaddingRight="5dp"
        app:contentPaddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="358dp"
            android:layout_height="130dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="239dp"
                android:text="@string/grade"
                android:textColor="#080A1A"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textView21"
                app:layout_constraintEnd_toStartOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="183dp"
                android:text="@string/Subject"
                android:textColor="#080A1A"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView22"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="201dp"
                android:layout_marginBottom="18dp"
                android:text="@string/Topic"
                android:textColor="#7E7E7E"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="#00212FC7"
                android:text="@string/Edit"
                android:textColor="#212FC7"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="#212FC7"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#00E64E4E"
                android:text="@string/Removebtn"
                android:textColor="#E64E4E"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/button4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="@+id/button4"
                app:strokeColor="#E64E4E"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/healdDate"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/textView19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/Time"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/textView20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/allocatemark"
                android:textColor="#878787"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.cardview.widget.CardView>